# SpriteCutter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SpriteCutter.sln  generate.bat
SpriteCutter/: SpriteCutter.vcxproj  SpriteCutter.vcxproj.filters  glad.c  imgui.ini  main.cpp
SpriteCutter/core/: FileMaker.h  GridViewer.cpp  GridViewer.h  Renderer.cpp  Renderer.h  TransformableImage.cpp  TransformableImage.h  Util.h
SpriteCutter/x64/Debug/: SpriteCutter.exe.recipe  vc142.idb
SpriteCutter/x64/Debug/SpriteCutter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SpriteCutter.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
builds/: ALL_BUILD.vcxproj  CMakeCache.txt  SpriteCutter.sln  SpriteCutter.vcxproj  SpriteCutter.vcxproj.filters  cmake_install.cmake
